feat: add more apis for batch query
