# restapi/operations/purchase/query_purchase_responses.go
@@ -1,0 +1,146 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package purchase
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bnb-chain/mind-marketplace-backend/models"
+)
+
+// QueryPurchaseOKCode is the HTTP code returned for type QueryPurchaseOK
+const QueryPurchaseOKCode int = 200
+
+/*QueryPurchaseOK successful operation
+
+swagger:response queryPurchaseOK
+*/
+type QueryPurchaseOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.PagePurchaseResponse `json:"body,omitempty"`
+}
+
+// NewQueryPurchaseOK creates QueryPurchaseOK with default headers values
+func NewQueryPurchaseOK() *QueryPurchaseOK {
+
+	return &QueryPurchaseOK{}
+}
+
+// WithPayload adds the payload to the query purchase o k response
+func (o *QueryPurchaseOK) WithPayload(payload *models.PagePurchaseResponse) *QueryPurchaseOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the query purchase o k response
+func (o *QueryPurchaseOK) SetPayload(payload *models.PagePurchaseResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *QueryPurchaseOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// QueryPurchaseBadRequestCode is the HTTP code returned for type QueryPurchaseBadRequest
+const QueryPurchaseBadRequestCode int = 400
+
+/*QueryPurchaseBadRequest Bad Request
+
+swagger:response queryPurchaseBadRequest
+*/
+type QueryPurchaseBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewQueryPurchaseBadRequest creates QueryPurchaseBadRequest with default headers values
+func NewQueryPurchaseBadRequest() *QueryPurchaseBadRequest {
+
+	return &QueryPurchaseBadRequest{}
+}
+
+// WithPayload adds the payload to the query purchase bad request response
+func (o *QueryPurchaseBadRequest) WithPayload(payload *models.Error) *QueryPurchaseBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the query purchase bad request response
+func (o *QueryPurchaseBadRequest) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *QueryPurchaseBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// QueryPurchaseInternalServerErrorCode is the HTTP code returned for type QueryPurchaseInternalServerError
+const QueryPurchaseInternalServerErrorCode int = 500
+
+/*QueryPurchaseInternalServerError internal server error
+
+swagger:response queryPurchaseInternalServerError
+*/
+type QueryPurchaseInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewQueryPurchaseInternalServerError creates QueryPurchaseInternalServerError with default headers values
+func NewQueryPurchaseInternalServerError() *QueryPurchaseInternalServerError {
+
+	return &QueryPurchaseInternalServerError{}
+}
+
+// WithPayload adds the payload to the query purchase internal server error response
+func (o *QueryPurchaseInternalServerError) WithPayload(payload *models.Error) *QueryPurchaseInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the query purchase internal server error response
+func (o *QueryPurchaseInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *QueryPurchaseInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
